--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -56,18 +56,20 @@ column_spec(2, width = "12cm") %>%
   landscape()
 ```
 
-This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here there was no evidence for an effect of BMI on platelet function, however alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
+This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here, alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found to potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. There was MR evidence that higher levels of MDC could contribute to DVT and PE. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
 
 ## Strengths 
 As previously mentioned, thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. This is therefore a strength of the current research.
 
 ## Limitations
-The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored where there was available data or where it was possible to address hypotheses with specifically designed basic science experiments. Certain analyses were limited by the availability of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants [@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
+The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored where there was available data or where it was possible to address hypotheses with specifically designed basic science experiments. Certain analyses were limited by the availability of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants[@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
 
-As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the sample size for the bariatric patient platelet study. The sample size (N=4) has limited power to detect associations, especially in experiments which have more variability. Before the COVID-19 pandemic, the plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would allow exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function [@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss [@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. 
+As mentioned in Chapter \@ref(BMI-platelets-clinic), a major limitation is the sample size for the bariatric patient platelet study. The sample size (N=4) has limited power to detect associations, especially in experiments which have more variability. Before the COVID-19 pandemic, the plan was to have bariatric patients with BMI > 40 kg/m^2^ and controls followed up at four time points. These time points were: baseline (2-3 weeks before surgery), after the very low energy diet (VLED) that precedes bariatric surgery (day of surgery), 6 weeks post-surgery and 12 months post-surgery. This would allow exploration of the change in an individual's platelet function with weight loss. Previous studies have researched the effect of obesity and bariatric surgery on platelet function[@Barrachina2019; @Dobrydneva2012], but platelet function at four timepoints surrounding bariatric surgery has not yet been explored, more specifically before and after the VLED. This study aimed to add in a time point at 12 months, which is where there is evidence for maximal weight loss[@Maciejewski2016]. Therefore this study would have been one of the most in depth platelet function studies for bariatric surgery. 
+
+One of the limitations of the analyses performed in Chapter xx and Chapter xx is that many proteins are not in the SOMAscan in both studies. Out of 4,034 SOMAmers in INTERVAL and 4601 SOMAmers in DiRECT, there were 2803 proteins in both. 
 
 ## Wider implications of findings
-The research has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC. Similarly, some more detailed blood counts from newer haematology analyzers do not provide IPC within the summary, however this can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to treatment [@Bernlochner2015a].
+The research has contributed to the understanding of mechanisms of obesity-related cardiovascular disease. As well as providing evidence for a role of body mass index in the production of immature platelets, the research surrounding IPC has wider implications. As mentioned in Chapter \@ref(BMI-platelets-INTERVAL), the standard full blood count used by the NHS does not include IPC. Similarly, some more detailed blood counts from newer haematology analyzers do not provide IPC within the summary, however this can be derived from IPF and PLT. The finding that IPC associates with whole blood platelet aggregation is important as it not only suggests that IPC should be considered in patients with obesity, but it could also be a useful biomarker of platelet hyperactivity across the population. Studies have indicated that there is a positive correlation between IPC and ADP-induced platelet aggregation in patients receiving either prasugrel or ticagrelor, therefore IPC could be used to predict which patients would be more responsive to treatment[@Bernlochner2015a].
 
 As well as IPC having the potential to be a useful biomarker, various plasma proteins could also be biomarkers for patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter x and x have been implicated in disease. For example, in work by Constantinescu et al., their analysis suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC (Reference Andrei's paper). Proteins such as INHBC could therefore be therapeutic targets. These proteins could also be potential biomarkers. Further work on protein profiles is required, as it is more likely a change in various proteins mediates the risk. 
  
@@ -76,7 +78,7 @@ Based on the findings of the research, there have been more questions which have
 
 The MR in Chapter \@ref(BMI-platelets-INTERVAL) provided causal evidence for higher BMI raising IPC. There was also a positive association between BMI and IPC within the cardiac surgery cohort and although the magnitude of estimate was the same, this effect was weak, potentially attributable to the modest sample size. It would be beneficial to validate this association within an independent cohort, such as UK Biobank. It would be useful to link IPC to medical records to be able to look at whether IPC is a predictor of cardiovascular events such as myocardial infarction or stroke. Mendelian randomization could also be implemented to look at the causal effect of IPC on cardiovascular outcomes. Once summary statistics become available for a GWAS of platelet function, with more participants, it would also be beneficial to do an MR analysis to explore the causal role of IPC in platelet function.
 
-Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as The stratification of obese phenotypes to optimize future obesity therapy (SOPHIA) study would likely have the relevant variables to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets [@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs) [@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be both labour intensive to perform proteomics on thousands of people's platelets computationally intensive to perform GWAS for thousands of proteins.
+Following the findings of Chapter \@ref(BMI-platelets-clinic), although underpowered, it was observed that some bariatric patients with obesity had a high IPC, as high as 40%. Therefore, this needs to be evaluated in more bariatric patients. There are other bariatric cohorts such as The stratification of obese phenotypes to optimize future obesity therapy (SOPHIA) study would likely have the relevant variables to perform these analyses. Further characterisation of the immature platelets in patients with obesity within the laboratory is also now required. Here it is possible to look at the expression of P-selectin within the gated immature platelets[@Bernlochner2015a], to determine how this differs in obesity and people of normal weight. It is currently unclear why higher BMI would be linked to the production of more platelets, but the platelet proteomics experiment using mass spectrometry implicated that certain proteins which may be markers of platelet maturity may be altered in obesity. These proteins such as actin could be characterised further using laboratory experiments. Use of small-molecule proteolysis targeting chimeras (PROTACs)[@Sledz2020], which can degrade proteins in platelets would be one such method to determine their role. GWAS for protein levels tend to be measured in the plasma or serum. This may be missing important changes which could be involved in disease progression. For example, levels of certain proteins could be unaltered in the plasma, but changes within certain cells such as neutrophils or platelets would provide additional information. If GWAS were performed for platelet proteins, Mendelian randomization could be performed to identify how this could affect cardiovascular outcomes. However, this would be both labour intensive to perform proteomics on thousands of people's platelets computationally intensive to perform GWAS for thousands of proteins.
 
 The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter xx, with
 Chapter 6
@@ -84,7 +86,7 @@ Chapter 6
 - These chemokines were measured within Chapter 7 - there was evidence for an association between BMI and MDC, and weak evidence for a causal effect (p=0.07). This did not pass multiple testing correction. It would be beneficial to look at these chemokines in other cohorts. In the DiRECT analysis, there was weak evidence that a reduction in weight reduces levels of MDC (p=0.06). Again, this did not pass multiple testing. The agreement in direction across the two studies (raised with higher BMI and reduced with weight loss), suggests that this effect could be real, however it may be a relatively small effect which may require more targeted proteomics. The effects were smaller for TARC, suggesting that if these effects are real, body mass index has a larger effect on MDC levels.
 
 Chapter 7
-The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship [@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the nlmr R package do not allow the user to define their bounds of their strata and therefore makes it difficult to interpret results. The glsmr package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail has been provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders [@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power.
+The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship[@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the nlmr R package do not allow the user to define their bounds of their strata and therefore makes it difficult to interpret results. The glsmr package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail has been provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders[@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power.
 
 Chapter 8
 The analyses in Chapter \@ref(BMI-protein-RCT) utilise an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI (from >40 gk/m^2^) to ..
