--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -64,7 +64,6 @@ include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 ### Study overview
 INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants [@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
 
-
 ### Assessment of BMI and covariables
 
 Participants completed online questionnaires wherein they reported their height and weight. BMI was calculated as weight in kilograms divided by the square of their height in metres (kg/m^2^). Available covariables were age, sex, previous or current smoking frequency (in three categories of: never, occasional, most days or every day) and alcohol intake frequency (in four categories of: rarely, less than once a week, 1-2 times a week, 3-5 times a week or most days for the proteomics analysis, or three categories of never, previous and current in the platelet trait analysis). These covariables were chosen as they were measured in the INTERVAL collection and are measures which are thought to influence adiposity and cardiometabolic health [@Bell2018a].
@@ -75,7 +74,7 @@ INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-
 
 ### Study population
 
-The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)). Participants were mostly of European descent. More details of this study can be found in Chapter \@ref(common-methods).
+The present study was conducted on up to 33388 European ancestry INTERVAL participants living in the United Kingdom. These were the participants who had genetic data, had basic phenotype data and full blood count measures (Figure \@ref(fig:INTERVAL-STROBE)).
 
 (ref:caption-INTERVAL-STROBE) **A STROBE diagram outlining participants included in the INTERVAL study for BMI and platelet trait analyses**.
 (ref:scaption-INTERVAL-STROBE) A STROBE diagram outlining participants included in the INTERVAL study for BMI and platelet trait analyses.
@@ -94,11 +93,11 @@ Name = c('P-LCR','H-IPF','PLT (F)','PLT (I)','PCT','PDW','IPC','IPF','MPV','SFL'
 FullName = c('Platelet large cell ratio','High fluorescence immature platelet fraction','Platelet count (PLT-F channel)','Platelet count (impedance channel)','Plateletcrit','Platelet distribution width' ,'Immature platelet count' ,'Immature platelet fraction','Mean platelet volume','Side fluorescence', 'Forward scatter','Side scatter')
 Deriv = c('(platelet number with volume>12 fL)/(platelet number of ordinary volume)  x 100', '(high fluorescence immature platelet number)/(platelet count)  x 100','Total number of platelets per litre','Total number of platelets per litre','Volume percentage of blood occupied by platelets','Standard deviation of platelet volume distribution, estimated as width at 20% modal height of platelet volume histogram','Immature platelet count','(Immature platelet number)/(platelet count)   x 100', 'Mean platelet volume','Side fluorescence measures the nucleic acid (mRNA) content of the platelet','Forward scatter is a measure of the size of the platelet' ,'Side scatter is a measure of the granularity of the platelet')
 
-Units <- c('%','%','109/L','109/L','%','fL','109/L','%','fL','RFUs','RFUs','RFUs')
+Units <- c('%','%','10^9^/L','10^9^/L','%','fL','10^9^/L','%','fL','RFUs','RFUs','RFUs')
 MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
 mytable = data.frame(cbind(Name, FullName, Deriv, Units, MeanSD))
 colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait',	'Units',	'Mean (SD)')
-mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, caption.short = "(ref:scaption-Platelet-traits)") %>% 
+mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-Platelet-traits)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(2, width = "4cm")   %>%
@@ -172,8 +171,8 @@ CI <- c(0.012,0.012,0.012,0.012,0.013,0.013,0.012,0.012,0.013,0.012,0.012,0.013)
 Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,'0.00','0.00',-0.01,-0.01)
 Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
 mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta squared',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, caption.short = "(ref:scaption-BMI-platelets-adjust)") %>% 
+colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
@@ -195,8 +194,8 @@ CI <- c(0.011,0.011,0.012,0.011,0.012,0.012,0.011,0.012,0.012,0.011,0.011,0.012)
 Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,'-0.028',0.003,'-0.001','-0.002','-0.003')
 Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,'-0.005',0.027,0.022,0.021, 0.021)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
-colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE, caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>% 
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE,  format = "markdown", caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3.5cm")   %>%
@@ -221,8 +220,8 @@ CI <- c(0.021,0.001,0.011,0.017)
 LowerCI <- c(0.162,0.010,'-0.108',0.057)
 UpperCI <- c(0.205,0.012,'-0.085',0.090)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
-mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>% 
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
+mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
@@ -253,7 +252,7 @@ P <- c('2.3E-312','2.2E-08','4.7E-01','9.2E-05','2.9E-15')
 AdjR <- c(0.042,0.001,'-1.4E-05',4.0E-4,0.002)
 Fstat <- c(1458.4,31.3,0.5,15.3,62.4)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
-colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R2',	'F statistic' )
+colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' )
 mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-INT-GRS-confounders-platelets)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
@@ -283,8 +282,8 @@ Upper <- c(0.139,0.122,0.108,0.110,0.103,0.091,0.088,0.093,0.086,0.084,0.073,0.0
 Wu <- c(0.973,0.672,0.774,0.0003,0.334,0.001,0.527,0.936,0.746,0.001,0.433,0.223)
 Fstat <- c(676,641,652,706,603,729,678,625,614,671,661,650)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper, Wu, Fstat))
-colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'Eta2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
+colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3cm")   %>%
@@ -295,7 +294,6 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, c
 (ref:scaption-BMI-platelet-forest) Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits
 ```{r BMI-platelet-forest, out.width="90%", echo = FALSE, fig.cap="(ref:caption-BMI-platelet-forest)", fig.scap = "(ref:scaption-BMI-platelet-forest)"}
 include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi = NA)
-
 ```
 
 ### Stratifying BMI and IPC associations by BMI group
@@ -317,8 +315,8 @@ CI <- c(1.635,0.035,0.066,0.063,0.580,0.037,0.070,0.069)
 Lower <- c(-1.434,0.005,0.027,-0.031,-0.311,-0.004,0.000,-0.051)
 Upper <- c(1.837,0.074,0.158,0.096,0.849,0.069,0.140,0.086)
 mytable = data.frame(cbind(Adjustment, Group, BMIrange, N, Beta, SE, P, R, CI, Lower, Upper))
-colnames(mytable) <- c('Adjustment', 'Group', 'BMI range',	'N',	'Beta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE  ) %>% 
+colnames(mytable) <- c('Adjustment', 'Group', 'BMI range',	'N',	'Beta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "markdown", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE  ) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
    column_spec(1, width = "2.5cm")   %>%
@@ -336,14 +334,14 @@ The total number of COPTIC participants was 2,541. Of these, 2,518 participants 
 (ref:scaption-COPTIC-participants-platelets) Characteristics of COPTIC study participants
 ```{r COPTIC-participants-platelets,  echo=FALSE}
 options(knitr.kable.NA = "")
-f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 109/L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 109/L)')
+f = c("Age", "Sex", "Female", "Male", "Body mass index (kg/m2)", "Smoking", "Never", "Ex-smoker (>5 years)", "Ex-smoker (1-5 years)", "Ex-smoker (30 days to 1 year)", "Current smoker", "Antiplatelet medications", "0", "1", "2", "3", 'ADP aggregation (AU)','Adrenaline aggregation (AU)','Arachidonic acid aggregation (AU)','TRAP-6 aggregation (AU)','Platelet count (x 10^9^/L)','Mean platelet volume (fL)','Immature platelet fraction (%)','Immature platelet count (x 10^9^/L)')
 co = c('66.7 (11.9)', NA, '24.9 %','75.1 %','27.9 (4.6)', NA,' 38.5 %','47.4 %','8.3 %','1.9 %','3.9 %', NA, '26.6 %','50.7 %','22.5 %','0.2 %','138.2 (50.1)','53.0 (28.2)','86.9 (62.1)','200.0 (50.1)','209.8 (60.5)','10.6 (1.0)','3.2 (1.9)' ,'6.3 (3.4)')
 i = c(2502,2518,NA,NA,2422,2469,NA,NA,NA,NA,NA,2467,NA,NA,NA,NA,2377,2363,2375,2373,2409,2400,2379,2383)
 mean <- c('63.9 (16.1)',NA, '38.2 %' ,'61.8 %','27.2 (4.9)', NA, '50.8 %','38.4 %','6.3 %','2.1 %','2.4 %', NA, '100 %', NA, NA, NA,'141 (46.5)','56.8 (32.3)','148.9 (52.4)','198.7 (50.0)','200.9 (57.6)','10.6 (0.98)','3.3 (2.0)','6.2 (3.3)')
 n <- c(655,655,NA,NA,649,654,NA,NA,NA,NA,NA,655,NA,NA,NA,NA,625,621,623,623,637,634,628,629)
 mytable = data.frame("Variable"  = f, "Mean (SD) or % (all)" = co, "N (all)" = i, "Mean (SD) or % (included)" = mean, "N (included)" = n)
 colnames(mytable) <- c("Variable",  "Mean (SD) or % (all)", "N (all)", "Mean (SD) or % (included)", "N (included)" )
-mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>% 
+mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
    add_indent(c(3, 4, 7:11, 13:16), level_of_indent = 1) %>%
@@ -366,8 +364,8 @@ CI <- c(0.07, 0.07, 0.07, 0.07)
 Lower <- c("0.00", -0.01, -0.03, -0.04)
 Upper <- c(0.15, 0.14, 0.10, 0.11)
 mytable = data.frame(cbind(Outcome, N, Beta, SE, P, R, CI, Lower, Upper))
-colnames(mytable) <- c('Outcome',	'N',	'Βeta coefficient',	'SE',	'P value',	'R2',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) %>% 
+colnames(mytable) <- c('Outcome',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "markdown", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
@@ -375,7 +373,7 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", caption.short=
 
 ### Association between IPC and aggregation in COPTIC cohort
 
-To determine the potential functional effects of variation in IPC, the COPTIC cohort was used to assess the observational association between IPC and whole blood platelet aggregation in response to a range of platelet agonists (Figure \@ref(fig:IPC-aggregation)A). In participants who were not on antiplatelet therapy (up to N=655), there was evidence for a positive association between IPC and aggregation induced by adrenaline (0.13 SD increase per SD increase in IPC, 95% CI 0.04 to 0.21, p=3.7x10-3), TRAP-6 (0.11 SD increase per SD increase in IPC, 95% 0.03 to 0.18, p=7.8x10-3) and ADP (0.08 SD per SD increase in IPC, 95% 0.01 to 0.0.15, p=0.04). As there was a high correlation among platelet traits (Figure \@ref(fig:IPC-aggregation)A, Figure \@ref(fig:IPC-aggregation)B), the effect of MPV, PLT and IPF were also assessed. PLT was associated with all four measures of aggregation, with a larger effect estimate than IPC (Figure \@ref(fig:IPC-aggregation)A). The finding that IPC does not correlate with PLT however suggests that the effect of IPC on platelet aggregation is independent of the effect of PLT on platelet aggregation (Figure \@ref(fig:IPC-aggregation)B). Fitting PLT alongside IPC as an additional predictor of aggregation had little effect on the IPC effect estimate providing further evidence of independent contributions from the two traits (Figure \@ref(fig:IPC-aggregation)C). Adjustment for PLT in the regression model for the association between IPF and aggregation provided estimates of a similar magnitude to that of IPC and aggregation.
+To determine the potential functional effects of variation in IPC, the COPTIC cohort was used to assess the observational association between IPC and whole blood platelet aggregation in response to a range of platelet agonists (Figure \@ref(fig:IPC-aggregation)A). In participants who were not on antiplatelet therapy (up to N=655), there was evidence for a positive association between IPC and aggregation induced by adrenaline (0.13 SD increase per SD increase in IPC, 95% CI 0.04 to 0.21, p=3.7x10^-3^), TRAP-6 (0.11 SD increase per SD increase in IPC, 95% 0.03 to 0.18, p=7.8x10^-3^) and ADP (0.08 SD per SD increase in IPC, 95% 0.01 to 0.0.15, p=0.04). As there was a high correlation among platelet traits (Figure \@ref(fig:IPC-aggregation)A, Figure \@ref(fig:IPC-aggregation)B), the effect of MPV, PLT and IPF were also assessed. PLT was associated with all four measures of aggregation, with a larger effect estimate than IPC (Figure \@ref(fig:IPC-aggregation)A). The finding that IPC does not correlate with PLT however suggests that the effect of IPC on platelet aggregation is independent of the effect of PLT on platelet aggregation (Figure \@ref(fig:IPC-aggregation)B). Fitting PLT alongside IPC as an additional predictor of aggregation had little effect on the IPC effect estimate providing further evidence of independent contributions from the two traits (Figure \@ref(fig:IPC-aggregation)C). Adjustment for PLT in the regression model for the association between IPF and aggregation provided estimates of a similar magnitude to that of IPC and aggregation.
 
 (ref:caption-IPC-aggregation) **Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants.** A) Forest plot displaying the association between platelet measures (exposure) and aggregation (outcomes). B) Correlation matrix displaying the Pearson’s correlation coefficient (r) between platelet traits. C) Forest plot displaying the effect estimate for the association between immature platelet count (IPC) or immature platelet fraction (IPF) and measures of aggregation, with or without adjustment for platelet count (PLT). ADP = adenosine diphosphate, AA = arachidonic acid, MPV = mean platelet volume.
 (ref:scaption-IPC-aggregation) Association between platelet measures and whole blood platelet aggregation in COPTIC trial participants
